# ufs_tools

./: .pycodestyle  APPLICATIONS.md  README.md
.github/workflows/: containers.yaml  pycodestyle.yaml  venv.yaml
Docker/: build.sh  ubuntu20.04-miniconda_ufs_pyutils.ufs_tools.def  ubuntu20.04-miniconda_ufs_pyutils.ufs_tools.docker
docs/doxygen/: .gitignore  compile  doxyfile  mainpage.h
docs/source/: conf.py  esmf_remap.rst  gridspec.rst  index.rst  remapper.rst
docs/source/_static/: custom.css
parm/esmf_remap/: README.md  esmf_remap.yaml  esmf_remap_tmpl.yaml  wrapper_esmf_remap.yaml
parm/gridspec/: README.md  gridspec.tripolar.0p25.yaml  gridspec.tripolar.0p5.yaml  gridspec.tripolar.1p0.yaml  gridspec.tripolar.5p0.yaml  gridspec.yaml
parm/innov_stats/: gsi_atmos.yaml  soca_ice.yaml  soca_ocean.yaml
parm/innov_stats/compute/: soca_ocean.yaml
parm/innov_stats/plotting/: innov_stats.gsi_atmos.omf_profile.yaml  innov_stats.gsi_atmos.omf_timeseries.yaml  innov_stats.soca_ice.omf_timeseries.yaml  innov_stats.soca_ocean.omf_profile.yaml  innov_stats.soca_ocean.omf_timeseries.yaml
parm/remapper/: cice.initconds_remapper.yaml  mom6.initconds_remapper.yaml
parm/tcdiags/: inputs.yaml  tcdiags.yaml
scripts/: compute_esmf_remap.py  compute_gridspec.py  compute_innov_stats.py  compute_remapper.py  compute_tcdiags.py  esmf_remapping.py  plotting_innov_stats.py  run_innov_stats.py
sorc/: CMakeLists.txt
sorc/fson/: CMakeLists.txt
sorc/gridprojs/: CMakeLists.txt
sorc/slint/: CMakeLists.txt
ush/: exceptions.py
ush/esmf_remap/: __init__.py  ncio.py
ush/gridspec/: __init__.py  arakawa_c.py
ush/innov_stats/: __init__.py  gsi_atmos.py  soca_ice.py  soca_ocean.py
ush/innov_stats/compute/: __init__.py  gsi_atmos.py  soca_ice.py  soca_ocean.py
ush/innov_stats/plot/: __init__.py  omf_profile.py  omf_timeseries.b.py
ush/innov_stats/plot/apps/: gsi_atmos.py  soca_ice.py  soca_ocean.py
ush/innov_stats/plot/plots/: __init__.py  omf_profile_plot.py  omf_timeseries_plot.b.py  omf_timeseries_plot.py
ush/innov_stats/plotting/: __init__.py  gsi_atmos.py  omf_profile.py  omf_timeseries.py
ush/remapper/: __init__.py
ush/remapper/models/: __init__.py  mom6.py
ush/remapper/models/ice/: __init__.py  cice.py  glorys.py
ush/remapper/models/ocean/: __init__.py  mom6.py  oras5.py
ush/remapper/remap/: __init__.py  cyclic.py  esmf.py  maskupdate.py
ush/remapper/remapio/: xarray_interface.py
ush/tcdiags/: __init__.py
ush/tcdiags/atmos/: heights.py  pressure_from_thickness.py  pressures.py  winds.py
ush/tcdiags/geomets/: __init__.py
ush/tcdiags/interp/: __init__.py
ush/tcdiags/io/: __init__.py
ush/tcdiags/metrics/: tcmpi.py
ush/tcdiags/tc/: __init__.py
wrappers/: wrapper_esmf_remap.py
